{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 1401,
  "lineage": "5bbb3849-1d67-536f-c750-4f1bbf831c15",
  "resources": [
    {
      "module": "module.bastion_host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "task_node_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02538f8925e3aa27a",
            "arn": "arn:aws:ec2:us-east-1:412723383795:instance/i-002515ee643c811d1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-002515ee643c811d1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0563b4a9620b0ea15",
            "private_dns": "ip-10-0-1-99.ec2.internal",
            "private_ip": "10.0.1.99",
            "public_dns": "ec2-3-80-233-216.compute-1.amazonaws.com",
            "public_ip": "3.80.233.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0434cd7749df3ea06",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01701ec0097275451",
            "tags": {
              "Name": "task-node-bastion_host-0"
            },
            "tags_all": {
              "Name": "task-node-bastion_host-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04cc67f0233924dc6"
            ]
          },
          "dependencies": [
            "module.bastion_host.data.aws_ami.amzlinux2",
            "module.networking.aws_db_subnet_group.task_rds_subnet_group",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.task_natgw",
            "module.networking.aws_route.task_nat_route",
            "module.networking.aws_route.task_public_route",
            "module.networking.aws_route_table.task_nat_rt",
            "module.networking.aws_route_table.task_public_rt",
            "module.networking.aws_route_table_association.mtc_nat_assoc",
            "module.networking.aws_route_table_association.task_public_assoc",
            "module.networking.aws_security_group.task_sg",
            "module.networking.aws_subnet.task_app_private_subnet",
            "module.networking.aws_subnet.task_data_private_subnet",
            "module.networking.aws_subnet.task_public_subnet",
            "module.networking.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute_app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "task_node_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02538f8925e3aa27a",
            "arn": "arn:aws:ec2:us-east-1:412723383795:instance/i-01e0c22430c480f10",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01e0c22430c480f10",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0662ab5b0447e9ddb",
            "private_dns": "ip-10-0-2-240.ec2.internal",
            "private_ip": "10.0.2.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02609a3fdb33935e0",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03af90d43f75eed94",
            "tags": {
              "Name": "task-node-compute_app-0"
            },
            "tags_all": {
              "Name": "task-node-compute_app-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-038bc791ec108986c"
            ]
          },
          "dependencies": [
            "module.compute_app.data.aws_ami.amzlinux2",
            "module.networking.aws_db_subnet_group.task_rds_subnet_group",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.task_natgw",
            "module.networking.aws_route.task_nat_route",
            "module.networking.aws_route.task_public_route",
            "module.networking.aws_route_table.task_nat_rt",
            "module.networking.aws_route_table.task_public_rt",
            "module.networking.aws_route_table_association.mtc_nat_assoc",
            "module.networking.aws_route_table_association.task_public_assoc",
            "module.networking.aws_security_group.task_sg",
            "module.networking.aws_subnet.task_app_private_subnet",
            "module.networking.aws_subnet.task_data_private_subnet",
            "module.networking.aws_subnet.task_public_subnet",
            "module.networking.aws_vpc.task_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02538f8925e3aa27a",
            "arn": "arn:aws:ec2:us-east-1:412723383795:instance/i-0f26c8bf27345834d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f26c8bf27345834d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03f596a4824d50de2",
            "private_dns": "ip-10-0-4-85.ec2.internal",
            "private_ip": "10.0.4.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04a85ddea95c99a38",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b88cfc4bcbce5baf",
            "tags": {
              "Name": "task-node-compute_app-1"
            },
            "tags_all": {
              "Name": "task-node-compute_app-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-038bc791ec108986c"
            ]
          },
          "dependencies": [
            "module.compute_app.data.aws_ami.amzlinux2",
            "module.networking.aws_db_subnet_group.task_rds_subnet_group",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.task_natgw",
            "module.networking.aws_route.task_nat_route",
            "module.networking.aws_route.task_public_route",
            "module.networking.aws_route_table.task_nat_rt",
            "module.networking.aws_route_table.task_public_rt",
            "module.networking.aws_route_table_association.mtc_nat_assoc",
            "module.networking.aws_route_table_association.task_public_assoc",
            "module.networking.aws_security_group.task_sg",
            "module.networking.aws_subnet.task_app_private_subnet",
            "module.networking.aws_subnet.task_data_private_subnet",
            "module.networking.aws_subnet.task_public_subnet",
            "module.networking.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ab47688180e42d6",
            "association_id": "eipassoc-028e9b6d35018f3e9",
            "domain": "vpc",
            "id": "eipalloc-03ab47688180e42d6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01213e0d5ae12d488",
            "private_dns": "ip-10-0-3-4.ec2.internal",
            "private_ip": "10.0.3.4",
            "public_dns": "ec2-3-209-35-211.compute-1.amazonaws.com",
            "public_ip": "3.209.35.211",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412723383795:internet-gateway/igw-0dfbfca1589d67a20",
            "id": "igw-0dfbfca1589d67a20",
            "owner_id": "412723383795",
            "tags": {
              "Name": "task-igw"
            },
            "tags_all": {
              "Name": "task-igw"
            },
            "vpc_id": "vpc-04400f1beafaae4ea"
          },
          "dependencies": [
            "module.networking.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "task_natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ab47688180e42d6",
            "connectivity_type": "public",
            "id": "nat-0cffe244cc35a2687",
            "network_interface_id": "eni-01213e0d5ae12d488",
            "private_ip": "10.0.3.4",
            "public_ip": "3.209.35.211",
            "subnet_id": "subnet-00dd5103d6cdf953b",
            "tags": {
              "Name": "task-natgw"
            },
            "tags_all": {
              "Name": "task-natgw"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_subnet.task_public_subnet",
            "module.networking.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "task_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05f5050b7872232481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cffe244cc35a2687",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05f5050b787223248",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.task_natgw",
            "module.networking.aws_route_table.task_nat_rt",
            "module.networking.aws_subnet.task_public_subnet",
            "module.networking.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "task_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dfbfca1589d67a20",
            "id": "r-rtb-0125e002cb3ed3b721080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0125e002cb3ed3b72",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.task_public_rt",
            "module.networking.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "task_nat_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412723383795:route-table/rtb-05f5050b787223248",
            "id": "rtb-05f5050b787223248",
            "owner_id": "412723383795",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cffe244cc35a2687",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "task-nat-rt"
            },
            "tags_all": {
              "Name": "task-nat-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04400f1beafaae4ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "task_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412723383795:route-table/rtb-0125e002cb3ed3b72",
            "id": "rtb-0125e002cb3ed3b72",
            "owner_id": "412723383795",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dfbfca1589d67a20",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "task-public-rt"
            },
            "tags_all": {
              "Name": "task-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04400f1beafaae4ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mtc_nat_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c8bef5ae32a81d2",
            "route_table_id": "rtb-05f5050b787223248",
            "subnet_id": "subnet-03af90d43f75eed94"
          },
          "dependencies": [
            "module.networking.aws_route_table.task_nat_rt",
            "module.networking.aws_subnet.task_app_private_subnet",
            "module.networking.aws_vpc.task_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c30b7a96864b9c7",
            "route_table_id": "rtb-05f5050b787223248",
            "subnet_id": "subnet-0b88cfc4bcbce5baf"
          },
          "dependencies": [
            "module.networking.aws_route_table.task_nat_rt",
            "module.networking.aws_subnet.task_app_private_subnet",
            "module.networking.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "task_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0160a3faee90a2f85",
            "route_table_id": "rtb-0125e002cb3ed3b72",
            "subnet_id": "subnet-01701ec0097275451"
          },
          "dependencies": [
            "module.networking.aws_route_table.task_public_rt",
            "module.networking.aws_subnet.task_public_subnet",
            "module.networking.aws_vpc.task_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09320caf49ea0225c",
            "route_table_id": "rtb-0125e002cb3ed3b72",
            "subnet_id": "subnet-00dd5103d6cdf953b"
          },
          "dependencies": [
            "module.networking.aws_route_table.task_public_rt",
            "module.networking.aws_subnet.task_public_subnet",
            "module.networking.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "task_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bastion",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412723383795:security-group/sg-04cc67f0233924dc6",
            "description": "bastion sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04cc67f0233924dc6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "basion_sg",
            "name_prefix": "",
            "owner_id": "412723383795",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04400f1beafaae4ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.task_vpc"
          ]
        },
        {
          "index_key": "private",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412723383795:security-group/sg-038bc791ec108986c",
            "description": "private sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038bc791ec108986c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_sg",
            "name_prefix": "",
            "owner_id": "412723383795",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04400f1beafaae4ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.task_vpc"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412723383795:security-group/sg-070a5c33bdab60308",
            "description": "public sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070a5c33bdab60308",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_sg",
            "name_prefix": "",
            "owner_id": "412723383795",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04400f1beafaae4ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.task_vpc"
          ]
        },
        {
          "index_key": "rds",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412723383795:security-group/sg-0a7112ffa65ca311d",
            "description": "rds sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7112ffa65ca311d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "412723383795",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04400f1beafaae4ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "task_app_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412723383795:subnet/subnet-03af90d43f75eed94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03af90d43f75eed94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "412723383795",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-app-private-1"
            },
            "tags_all": {
              "Name": "task-app-private-1"
            },
            "vpc_id": "vpc-04400f1beafaae4ea"
          },
          "dependencies": [
            "module.networking.aws_vpc.task_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412723383795:subnet/subnet-0b88cfc4bcbce5baf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b88cfc4bcbce5baf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "412723383795",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-app-private-2"
            },
            "tags_all": {
              "Name": "task-app-private-2"
            },
            "vpc_id": "vpc-04400f1beafaae4ea"
          },
          "dependencies": [
            "module.networking.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "task_data_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412723383795:subnet/subnet-0a3897d161a183064",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3897d161a183064",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "412723383795",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-data-private-1"
            },
            "tags_all": {
              "Name": "task-data-private-1"
            },
            "vpc_id": "vpc-04400f1beafaae4ea"
          },
          "dependencies": [
            "module.networking.aws_vpc.task_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412723383795:subnet/subnet-09d62349bf6875107",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d62349bf6875107",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "412723383795",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-data-private-2"
            },
            "tags_all": {
              "Name": "task-data-private-2"
            },
            "vpc_id": "vpc-04400f1beafaae4ea"
          },
          "dependencies": [
            "module.networking.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "task_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412723383795:subnet/subnet-01701ec0097275451",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01701ec0097275451",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "412723383795",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-public-1"
            },
            "tags_all": {
              "Name": "task-public-1"
            },
            "vpc_id": "vpc-04400f1beafaae4ea"
          },
          "dependencies": [
            "module.networking.aws_vpc.task_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412723383795:subnet/subnet-00dd5103d6cdf953b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00dd5103d6cdf953b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "412723383795",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-public-2"
            },
            "tags_all": {
              "Name": "task-public-2"
            },
            "vpc_id": "vpc-04400f1beafaae4ea"
          },
          "dependencies": [
            "module.networking.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412723383795:vpc/vpc-04400f1beafaae4ea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-065b5e197b46d67cf",
            "default_route_table_id": "rtb-0554661e0c71e3044",
            "default_security_group_id": "sg-0a4bbf045433125c9",
            "dhcp_options_id": "dopt-618a6d1c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04400f1beafaae4ea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0554661e0c71e3044",
            "owner_id": "412723383795",
            "tags": {
              "Name": "mtc-vpc-task"
            },
            "tags_all": {
              "Name": "mtc-vpc-task"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}